--- a/.github/workflows/terraform.yaml
+++ b/.github/workflows/terraform.yaml
@@ -3,10 +3,10 @@ name: 'Terraform - Production'
 on:
   push:
     branches:
-    - main
+    - master
   pull_request:
     branches:
-    - main
+    - master
 
 env:
   AWS_ACCESS_KEY_ID: ${{ secrets. AWS_ACCESS_KEY_ID }}
@@ -84,8 +84,8 @@ jobs:
             soft_fail: true
             framework: terraform
 
-      - name: Run Checkov
-        run: docker run --volume "${{ env.GITHUB_WORKSPACE }}":/tf bridgecrew/checkov -f tfplan.json --soft-fail
+      #- name: Run Checkov
+       # run: docker run --volume "${{ env.GITHUB_WORKSPACE }}":/tf bridgecrew/checkov -f tfplan.json --soft-fail
 
       
 
